methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:1: error: Missing closing brace `}' assumed here
var c:Int=0
^MethodsReturning:1: error: expected class or object definition
var c:Int=0
^MethodsReturning:2: error: expected class or object definition
var seenBaggle:Int=0
^MethodsReturning:4: error: expected class or object definition
def haveBaggle():Boolean = {
^